--- a/tests/common.yaml
+++ b/tests/common.yaml
@@ -6,3 +6,4 @@
 
 artemis_guestname_pattern: "[a-f0-9]{8}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{4}-[a-f0-9]{12}"
 hostname_ip_address_pattern: "(?:[a-zA-Z0-9\\.\\-_]+?|\\d+\\.\\d+\\.\\d+\\.\\d+)"
+timestamp_pattern: "[0-9]{4}-[0-9]{2}-[0-9]{2}T[0-9]{2}:[0-9]{2}:[0-9]{2}\\.[0-9]{6}\\+[0-9]{2}:[0-9]{2}"
