--- a/.envrc
+++ b/.envrc
@@ -59,6 +59,7 @@ PATH_add "$DIRENV_PATH/.krew/bin"
 # terraform
 #
 export TF_TOKEN_app_terraform_io="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -er .credentials.terraform.cloud.testing_farm_bot.token)"
+export TF_VAR_terraform_api_url="$(ansible-vault view --vault-password-file .vault_pass $SECRETS_FILE | yq -r .credentials.terraform.cloud.api)"
 export TF_VAR_ansible_vault_password_file="$PROJECT_ROOT/.vault_pass"
 export TF_VAR_ansible_vault_credentials="credentials.yaml"
 export TF_VAR_ansible_vault_secrets_root="$(dirname $SECRETS_FILE)"
