Discover server/workers in all envs, fix ssh access and mock output strategy
Make sure we discover all server and worker hosts, e.g.

```
testing_farm_worker_d5d7fe6f
testing_farm_dev_worker_d5d7fe6f
testing_farm_staging_worker_d5d7fe6f

testing_farm_server_d5d7fe6f
testing_farm_dev_server_d5d7fe6f
testing_farm_staging_server_d5d7fe6f
```

Fix mock output merging strategy, so that after adding a new output to
Artemis the newly added output is merged with current state.
This would cause issues with updated to an existing deployment, like
staging.

Fix the invetory script to correctly recognize the servers / workers
based on tags and assigns them to the correct group.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/inventory/fedora_aws_ec2.yaml
+++ b/ansible/inventory/fedora_aws_ec2.yaml
@@ -13,8 +13,8 @@ cache_connection: .direnv/aws-cache
 boto_profile: fedora_us_east_2
 
 include_filters:
-  - tag:Name:
-      - "testing_farm_worker_*"
+  - tag:ServiceOwner:
+      - "TFT"
 
 hostnames:
   - "tag:Name"
@@ -23,4 +23,5 @@ compose:
   ansible_host: public_ip_address
 
 groups:
-  testing_farm_public_workers: true
+  testing_farm_public_workers: tags.ServiceOwner == 'TFT' and tags.ServiceComponent == 'Worker'
+  testing_farm_public_servers: tags.ServiceOwner == 'TFT' and tags.ServiceComponent == 'Server'
