--- a/ansible/inventory/group_vars/testing_farm_public_servers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_public_servers.yaml
@@ -1,4 +1,5 @@
 ---
 # ssh key
 ssh_private_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_public_server"
-ssh_public_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_public_server"
+ssh_public_key: "{{ ansible_dir }}/secrets/ssh/id_rsa_public_server.pub"
+ansible_user: core
