tests: raise number of parallel runs

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -51,7 +51,7 @@ workflow:
     - changes:
         - .envrc
         - poetry.lock
-        - Makefile
+        - Makefile*
         - setup/*
 
   terragrunt_infra:
