--- a/Makefile.maintainer
+++ b/Makefile.maintainer
@@ -7,8 +7,9 @@ WORKER_IMAGE ?= quay.io/testing-farm/worker:latest
 # default development cluster name
 DEV_CLUSTER_NAME ?= $(or $(TF_VAR_cluster_name),testing-farm-dev-$$USER)
 
-# run in parallel 5 tests
-PYTEST_PARALLEL_OPTIONS ?= -d --tx 5*popen//python=python3.9
+# run pytest tests in parallel
+PYTEST_PARALLEL_RUNS ?= 16
+PYTEST_PARALLEL_OPTIONS ?= -d --tx $(PYTEST_PARALLEL_RUNS)*popen//python=python3.9
 
 # default Terraform lock timeout
 DEFAULT_LOCK_TIMEOUT ?= 10m
