workers: add node exporter
Relates to TFT-2168

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/ansible/playbooks/create-redhat-worker.yaml
+++ b/ansible/playbooks/create-redhat-worker.yaml
@@ -102,6 +102,8 @@
         swap_file_size_mb: "16384"
         swap_file_state: present
       become: true
+    - name: geerlingguy.node_exporter
+      become: true
     - name: nomad
   tasks:
     - include: ../tasks/jobs-register.yaml
