gitlab-ci: limit terragrunt parallelization for infra
Hitting this in the wild:

```
Error: You have exceeded the API's rate limit.
```

Hopefully this will help to mitigate hitting the API request quota.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -250,6 +250,7 @@ test/infra:
     - !reference [.direnv, script]
     - !reference [.script_with_cleanup, script]
   variables:
+    TERRAGRUNT_PARALLELISM: 3
     SCRIPT: >-
       make infra/init &&
       make infra/plan
