tests: split out pipeline containers tests, limit parallelization
Move the containers tests to a separate make target
and separate gitlab ci jobs.

Limit parallelization to mitigage issues with network creation in tmt
if parallelization high.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -204,6 +204,26 @@ test/staging/pipeline:
     - !reference [.rules, terragrunt_staging_ci]
     - !reference [.rules, public_pipeline_tests]
 
+test/staging/pipeline/container:
+  extends: [.direnv, .archive_tests]
+  stage: test
+  script:
+    - !reference [.direnv, script]
+    - !reference [.script_with_cleanup, script]
+  variables:
+    PYTEST_PARALLEL_RUNS: 1
+    SCRIPT: >-
+      make staging/apply/artemis/ci &&
+      make test/staging/pipeline/container/ci
+    AFTER_SCRIPT: >-
+      make staging/destroy/artemis/ci > /dev/null &&
+      make test/pytest/oculus
+  rules:
+    - !reference [.rules, not_default_branch]
+    - !reference [.rules, not_schedule]
+    - !reference [.rules, terragrunt_staging_ci]
+    - !reference [.rules, public_pipeline_tests]
+
 test/staging/compose:
   extends: [.direnv, .archive_tests]
   stage: test
