--- a/Makefile.maintainer
+++ b/Makefile.maintainer
@@ -243,7 +243,6 @@ update/redhat/pipeline/jobs: .FORCE  ## Update pipeline jobs on Red Hat ranch
 	$(call run_pipeline_update,⛴️,updating Red Hat ranch pipeline jobs,testing_farm_redhat_workers,update_jobs)
 
 
-
 ##@ Tests | maintainer
 
 define run_pytest_gluetool
@@ -273,18 +272,18 @@ test/dev/compose: .FORCE wait/artemis/dev generate/dev/citool-config  ## Run com
 	$(call run_pytest_gluetool,dev,-m "public and compose")
 	$(call download_oculus_to_pytest)
 
-test/staging/pipeline: .FORCE wait/artemis/staging generate/staging/citool-config  ## Run worker tests | dev
+test/staging/pipeline: .FORCE wait/artemis/staging generate/staging/citool-config  ## Run worker tests, except container | staging
 	$(call run_pytest_gluetool,staging,-m "public and pipeline and not container")
 	$(call download_oculus_to_pytest)
 
-test/staging/pipeline/container: .FORCE wait/artemis/staging generate/staging/citool-config  ## Run worker tests | dev
+test/staging/pipeline/container: .FORCE wait/artemis/staging generate/staging/citool-config  ## Run worker tests, container only | staging
 	$(call run_pytest_gluetool,staging,-m "public and pipeline and container")
 	$(call download_oculus_to_pytest)
 
-test/staging/pipeline/ci: .FORCE wait/artemis/staging/ci generate/staging/citool-config/ci  ## Run worker tests | staging | CI
+test/staging/pipeline/ci: .FORCE wait/artemis/staging/ci generate/staging/citool-config/ci  ## Run worker tests, except container | staging | CI
 	$(call run_pytest_gluetool,staging,-m "public and pipeline and not container")
 
-test/staging/pipeline/container/ci: .FORCE wait/artemis/staging/ci generate/staging/citool-config/ci  ## Run worker tests | staging | CI
+test/staging/pipeline/container/ci: .FORCE wait/artemis/staging/ci generate/staging/citool-config/ci  ## Run worker tests, container only | staging | CI
 	$(call run_pytest_gluetool,staging,-m "public and pipeline and container")
 
 test/staging/compose: .FORCE wait/artemis/staging generate/staging/citool-config  ## Run compose tests | staging
