--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,6 +6,8 @@ variables:
   # GitLab CI runs in world writable directory, we need to explicitely set ANSIBLE_CONFIG
   # https://docs.ansible.com/ansible/devel/reference_appendices/config.html#cfg-in-world-writable-dir
   ANSIBLE_CONFIG: ansible.cfg
+  # Set USER used to derive certain dev environment resource names
+  USER: testing-farm-gitlab-ci-$CI_JOB_ID
 
 workflow:
   rules:
