Factor out getting localhost IP to separate module
We used transitive dependencies in the current setup:

```
server/security-group -> artemis -> eks
```

Where `artemis` module provided the localhost IP.

We are hitting these bugs:

https://github.com/gruntwork-io/terragrunt/issues/3028 (version 0.57.2
and higher).

https://github.com/gruntwork-io/terragrunt/pull/2957 (version 0.55.0 and
lower).

By moving it to a seaprate module we remove this transitive dependency
and do not hit the bugs anymore:

```
server/security-group -> localhost

artemis -> localhost
        |
        -> eks
```

With that update to latest terragrunt `0.57.2`, so we do not hit
additional bugs.

Signed-off-by: Miroslav Vadkerti <mvadkert@redhat.com>

--- a/Makefile.maintainer
+++ b/Makefile.maintainer
@@ -146,6 +146,7 @@ staging/apply/artemis: .FORCE  ## Deploy | staging | artemis
 	$(call run_terragrunt_app,staging,artemis,apply)
 
 staging/apply/artemis/ci: .FORCE  ## Deploy | staging | artemis | CI
+	$(call run_terragrunt_app,staging,localhost,apply)
 	$(call run_terragrunt_app,staging,artemis-ci,apply)
 
 staging/destroy: .FORCE terminate/artemis/guests/staging  ## Destroy | staging
@@ -352,16 +353,16 @@ wait/artemis/staging/ci: .FORCE  ## Wait until Artemis is available | staging | 
 ##@ Cleanup | maintainer
 
 terminate/artemis/guests/dev: .FORCE  ## Terminate all EC2 instances created by Artemis | dev
-	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh dev
+	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh dev || true
 
 terminate/artemis/guests/staging: .FORCE  ## Terminate all EC2 instances created by Artemis | staging
-	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh staging
+	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh staging || true
 
 terminate/artemis/guests/staging/ci: .FORCE  ## Terminate all EC2 instances created by Artemis | staging | CI
-	@ARTEMIS_DEPLOYMENT=artemis-ci bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh staging
+	@ARTEMIS_DEPLOYMENT=artemis-ci bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh staging || true
 
 terminate/artemis/guests/production: .FORCE  ## Terminate all EC2 instances created by Artemis | staging
-	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh production
+	@bash $$PROJECT_ROOT/setup/terminate_artemis_guests.sh production || true
 
 terminate/eks/ci: .FORCE  ## Terminate all EKS CI clusters
 	@bash $$PROJECT_ROOT/setup/terminate_eks_ci_clusters.sh
