--- a/ansible/inventory/group_vars/testing_farm_public_workers.yaml
+++ b/ansible/inventory/group_vars/testing_farm_public_workers.yaml
@@ -68,6 +68,9 @@ jobs:
   - tf-tmt-container
   - tf-tmt-multihost
   - tf-sti
+job_request_timeout: 720
+nomad_job_args: "[\"${NOMAD_META_REQUEST_ID}\", \"${NOMAD_ALLOC_DIR}\"]"
+
 
 # artifacts
 artifacts_hostname: artifacts.dev.testing-farm.io
