--- a/terragrunt/environments/dev/worker/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
+++ b/terragrunt/environments/dev/worker/citool-config/guest-setup/pre-artifact-installation/tag-repository.yaml
@@ -86,6 +86,8 @@
     #
     - name: "Check if tag repository {{ tag_repository_url }} exists"
       command: "bash -c 'curl --head -L {{ tag_repository_url }} | grep -o -E \"(200|403|404)\"'"
+      retries: "{{ pkg_retry_count }}"
+      delay: "{{ pkg_retry_delay }}"
       register: http_status_code
 
     #
